2012-10-15  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Implement pixel snapshot generation in WTR
        https://bugs.webkit.org/show_bug.cgi?id=95992

        Reviewed by Jocelyn Turcotte.

        Switch the Qt implementation of the PlatformWebView to use
        QQuickWindow::grabWindow to generate the pixel results. This way
        we will go through the scenegraph and test the actual rendering backend.
        We use QQuickWindowPrivate::setRenderWithoutShowing to avoid the need of
        showing the window.

        * WebKitTestRunner/Target.pri: Had to added a bunch
        of modules to be able to use QQuickWindowPrivate.
        * WebKitTestRunner/qt/PlatformWebViewQt.cpp:
        (WTR::WrapperWindow::handleStatusChanged):
        (WTR::PlatformWebView::windowSnapshotImage):

2012-10-15  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt][WTR] Do a forced repaint before generating pixel results
        https://bugs.webkit.org/show_bug.cgi?id=98654

        Reviewed by Jocelyn Turcotte.

        Do a forced repaint before grabbing the pixel snapshot. This extra
        synchronisation is necessary with the CoordinatedGraphics rendering
        backend because it has a fully asynchronous nature. This patch make
        us using the window snapshot for pixel results which is necessary to
        capture animations and other dynamic content. The actual grabbing of
        the window has not been implemented in this patch. It will come in
        a follow-up.

        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::invoke):
        (WTR::TestInvocation::dump): Store results in member variables.
        Don't close output channels yet.
        (WTR::TestInvocation::dumpResults): Added. This is where we dump
        the results if no error happened.
        (WTR):
        (WTR::TestInvocation::didReceiveMessageFromInjectedBundle):
        * WebKitTestRunner/TestInvocation.h:
        (TestInvocation):